--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "name-here"
+name = "crop-health"
 version = "0.1.0"
 authors = [{ name = "GU Orbit Software Team", email = "uog.orbit@gmail.com" }]
 requires-python = ">=3.10"
@@ -18,11 +18,11 @@ classifiers = [
 dependencies = [
     "numpy >= 1.24.3",
     "rasterio >= 1.3.6",
+    "GDAL >= 3.6.2",
     "Pillow >= 9.4.0",
-    "tensorflow >= 2.10",
+    "matplotlib >= 3.8.2 ",
     "toml >= 0.10.2",
     "tqdm >= 4.64.1",
-    "pandas >= 1.5.1",
     "opencv-python-headless >= 4.8.0.76"
 ]
 
